gcc/testsuite/gdc.test/runnable/test11447b.d
// COMPILE_SEPARATELY
// EXTRA_SOURCES: imports/b11447.d
// PERMUTE_ARGS: -allinst

import imports.b11447;

void main()
{
    A a;
    aaa(a);
}
